; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_cputopo.c_has_die_topology.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_cputopo.c_has_die_topology.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utsname = type { i32 }

@MAXPATHLEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"x86_64\00", align 1
@DIE_SIB_FMT = common dso_local global i32 0, align 4
@F_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @has_die_topology to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @has_die_topology() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.utsname, align 4
  %5 = alloca i32, align 4
  %6 = load i32, i32* @MAXPATHLEN, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %2, align 8
  %9 = alloca i8, i64 %7, align 16
  store i64 %7, i64* %3, align 8
  %10 = call i64 @uname(%struct.utsname* %4)
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  store i32 1, i32* %5, align 4
  br label %29

13:                                               ; preds = %0
  %14 = getelementptr inbounds %struct.utsname, %struct.utsname* %4, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @strncmp(i32 %15, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 6)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %13
  store i32 0, i32* %1, align 4
  store i32 1, i32* %5, align 4
  br label %29

19:                                               ; preds = %13
  %20 = load i32, i32* @MAXPATHLEN, align 4
  %21 = load i32, i32* @DIE_SIB_FMT, align 4
  %22 = call i32 (...) @sysfs__mountpoint()
  %23 = call i32 @scnprintf(i8* %9, i32 %20, i32 %21, i32 %22, i32 0)
  %24 = load i32, i32* @F_OK, align 4
  %25 = call i32 @access(i8* %9, i32 %24)
  %26 = icmp eq i32 %25, -1
  br i1 %26, label %27, label %28

27:                                               ; preds = %19
  store i32 0, i32* %1, align 4
  store i32 1, i32* %5, align 4
  br label %29

28:                                               ; preds = %19
  store i32 1, i32* %1, align 4
  store i32 1, i32* %5, align 4
  br label %29

29:                                               ; preds = %28, %27, %18, %12
  %30 = load i8*, i8** %2, align 8
  call void @llvm.stackrestore(i8* %30)
  %31 = load i32, i32* %1, align 4
  ret i32 %31
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @uname(%struct.utsname*) #2

declare dso_local i64 @strncmp(i32, i8*, i32) #2

declare dso_local i32 @scnprintf(i8*, i32, i32, i32, i32) #2

declare dso_local i32 @sysfs__mountpoint(...) #2

declare dso_local i32 @access(i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
